# kodecks

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  LICENSE-MIT.md  README.md  Trunk.toml  rule.md
.devcontainer/: devcontainer.json
.github/workflows/: assets.yml  clippy.yml  optimize.yml  release.yml  test.yml  typos.yml  wasm.yml  web-deploy.yml
kodecks/: Cargo.toml
kodecks-bevy/: .gitignore  Cargo.toml
kodecks-bevy/assets/: fonts.txt
kodecks-bevy/assets/locales/en-US/: cards.ftl  lang.json  main.ftl
kodecks-bevy/assets/locales/ja-JP/: cards.ftl  lang.json  main.ftl
kodecks-bevy/src/: config.rs  debugger.rs  engine.rs  input.rs  main.rs  opts.rs
kodecks-bevy/src/assets/: card.rs  fluent.rs  mod.rs
kodecks-bevy/src/painter/: mod.rs  shield.rs
kodecks-bevy/src/painter/frames/: mod.rs
kodecks-bevy/src/painter/numbers/: mod.rs
kodecks-bevy/src/save_data/: container.rs  mod.rs  v1.rs
kodecks-bevy/src/scene/: app.rs  card.rs  config.rs  lang.rs  mod.rs  preloader.rs  spinner.rs  translator.rs
kodecks-bevy/src/scene/deck/: mod.rs
kodecks-bevy/src/scene/game/: board.rs  camera.rs  event.rs  log.rs  mod.rs  mode.rs  server.rs
kodecks-bevy/src/scene/game/cleanup/: mod.rs
kodecks-bevy/src/scene/game/loading/: mod.rs  net.rs
kodecks-bevy/src/scene/game/main/: animation.rs  battle.rs  deck.rs  dialog.rs  engine.rs  event.rs  life.rs  mod.rs  pointer.rs  setup.rs  shard.rs  stack.rs  turn.rs  ui.rs
kodecks-bevy/src/scene/game/main/card/: ability.rs  frame.rs  mod.rs  number.rs
kodecks-bevy/src/scene/game/result/: mod.rs
kodecks-bevy/src/scene/menu/: mod.rs
kodecks-bot/: Cargo.toml
kodecks-bot/src/: battle.rs  cast.rs  default.rs  lib.rs  mcts.rs  score.rs  select.rs  simple.rs
kodecks-bot/src/mcts/: mod.rs
kodecks-catalog/: Cargo.toml
kodecks-catalog/src/: decks.rs  lib.rs  macros.rs  profile.rs
kodecks-catalog/src/cards/: airborne_eagle_ray.rs  amalgam_rat.rs  amethyst_mantis.rs  ant.rs  auto_parrot.rs  awkward_auk.rs  badlands_chimera.rs  bambooster.rs  binary_starfish.rs  cenote_otter.rs  coppermine_scorpion.rs  cyanide_spitter.rs  deep_sea_wyrm.rs  demilune_nighthawk.rs  diamond_porcupine.rs  electric_clione.rs  electric_flytrap.rs  evergreen_flamingo.rs  flash_bang_jellyfish.rs  graphite_armadillo.rs  halo_tapir.rs  helium_puffer.rs  hostile_coyote.rs  icefall_weasel.rs  laser_frog.rs  leaf_veined_gecko.rs  marshland_moose.rs  minimum_bear.rs  mire_alligator.rs  mod.rs  moonlit_gecko.rs  moss_grown_mastodon.rs  oil_leaking_droid.rs  orepecker.rs  poison_tusk_babirusa.rs  pyrosnail.rs  quagmire_trilobite.rs  quartz_moth.rs  quicksand_skulker.rs  radio_deer.rs  (+16 more)
kodecks-dsl/: Cargo.toml
kodecks-dsl/src/: lib.rs
kodecks-dsl/src/script/: error.rs  exp.rs  mod.rs  value.rs
kodecks-engine/: Cargo.toml
kodecks-engine/src/: codec.rs  game.rs  lib.rs  local.rs  login.rs  message.rs  room.rs  session.rs  user.rs  version.rs  well_known.rs  worker.rs
kodecks-server/: Cargo.toml  build.rs
kodecks-server/src/: app.rs  auth.rs  background.rs  game.rs  lib.rs  local.rs  login.rs  main.rs  message.rs  pool.rs  room.rs  session.rs  socket.rs  token.rs  worker.rs
kodecks/src/: action.rs  card.rs  catalog.rs  color.rs  command.rs  computed.rs  condition.rs  config.rs  continuous.rs  deck.rs  effect.rs  error.rs  event.rs  field.rs  filter.rs  game.rs  graveyard.rs  hand.rs  id.rs  lib.rs  linear.rs  list.rs  log.rs  message.rs  modifier.rs  opcode.rs  phase.rs  player.rs  pool.rs  prelude.rs  profile.rs  regulation.rs  scenario.rs  score.rs  search.rs  sequence.rs  shard.rs  slot.rs  stack.rs  target.rs  (+3 more)
kodecks/src/ability/: anonymous.rs  keyword.rs  mod.rs  player.rs
kodecks/src/archetype/: effect.rs  mod.rs
kodecks/src/dsl/: filter.rs  mod.rs
kodecks/src/dsl/script/: error.rs  exp.rs  value.rs
kodecks/src/env/: action.rs  event.rs  local.rs  mod.rs  opcode.rs  phase.rs  state.rs
scripts/: build-wasm.sh  dist.ps1  dist.sh  dist_windows.ps1  download.ps1  download.sh  install-tools.sh  optimize.sh
web/: index.html  initializer.mjs
