[workspace]
resolver = "2"
members = [
    "kodecks",
    "kodecks-bevy",
    "kodecks-bot",
    "kodecks-catalog",
    "kodecks-engine",
]

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.kodecks-bot]
opt-level = 2

[profile.release]
opt-level = 'z'
panic = 'abort'
debug = 0
strip = true
lto = true
codegen-units = 1
