[workspace]
resolver = "2"
members = [
    "kodecks",
    "kodecks-bevy",
    "kodecks-bot",
    "kodecks-catalog",
    "kodecks-engine",
    "kodecks-server",
]

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.kodecks-bot]
opt-level = 2

[profile.distribution]
inherits = "release"
lto = "thin"

[profile.web-distribution]
inherits = "release"
opt-level = 'z'
panic = 'abort'
strip = true
lto = true
codegen-units = 1
