[package]
name = "kodecks-bevy"
version = "0.1.0"
edition = "2021"
default-run = "kodecks-bevy"

[dependencies]
async-channel = "2.3.1"
async-compat = "0.2.4"
bevy = "0.14.1"
bevy_embedded_assets = { version = "0.11.0", optional = true }
bevy_mod_picking = { version = "0.20.1", features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
], default-features = false }
bevy_mod_reqwest = "0.16.0"
build-info = "0.0.38"
dashmap = "6.0.1"
fluent-bundle = "0.15.3"
fluent-syntax = "0.11.1"
fluent_content = "0.0.5"
futures-util = "0.3.30"
image = { version = "0.25.2", default-features = false, features = ["png"] }
kodecks = { path = "../kodecks" }
kodecks-bot = { path = "../kodecks-bot" }
kodecks-catalog = { path = "../kodecks-catalog" }
kodecks-engine = { path = "../kodecks-engine" }
leafwing-input-manager = "0.14.0"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"
reqwest-websocket = "0.4.2"
serde = { version = "1.0.208", features = ["derive"] }
serde_default = "0.2.0"
serde_json = "1.0.125"
serde_tuple = "0.5.0"
strum = "0.26.3"
sys-locale = "0.3.1"
thiserror = "1.0.63"
tracing = "0.1.40"
unic-langid = { version = "0.9.5", features = ["macros"] }
url = { version = "2.5.2", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kodecks-bot = { path = "../kodecks-bot", features = ["rayon"] }
image = { version = "0.25.2", default-features = false, features = ["rayon"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.3.0"
sys-locale = { version = "0.3.1", features = ["js"] }

[build-dependencies]
build-info-build = "0.0.38"

[features]
trace_chrome = ["trace", "bevy/trace_chrome"]
trace = []
embed_assets = ["bevy_embedded_assets"]
