[package]
name = "kodecks-bevy"
version = "0.1.0"
edition = "2021"
default-run = "kodecks"

[[bin]]
name = "kodecks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
async-channel = "2.3.1"
async-compat = "0.2.4"
base64 = "0.22.1"
bevy = "0.14.2"
bevy-inspector-egui = "0.27.0"
bevy_embedded_assets = { version = "0.11.0", optional = true }
bevy_mod_picking = { version = "0.20.1", features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
], default-features = false }
bincode = "2.0.0-rc.3"
chrono = "0.4.38"
dashmap = "6.0.1"
flate2 = "1.0.34"
fluent-bundle = "0.15.3"
fluent-syntax = "0.11.1"
fluent_content = "0.0.5"
fnv = "1.0.7"
futures = "0.3.30"
futures-util = "0.3.30"
image = { version = "0.25.2", default-features = false, features = ["png"] }
k256 = { version = "0.13.4", features = [
    "arithmetic",
    "precomputed-tables",
    "schnorr",
    "std",
], default-features = false }
kodecks = { path = "../kodecks" }
kodecks-bot = { path = "../kodecks-bot" }
kodecks-catalog = { path = "../kodecks-catalog" }
kodecks-engine = { path = "../kodecks-engine" }
leafwing-input-manager = "0.15.1"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
nanoid = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-websocket = "0.4.2"
semver = "1.0.23"
serde = { version = "1.0.208", features = ["derive"] }
serde_default = "0.2.0"
serde_json = "1.0.125"
strum = "0.26.3"
sys-locale = "0.3.1"
thiserror = "1.0.63"
tracing = "0.1.40"
unic-langid = { version = "0.9.5", features = ["macros"] }
url = { version = "2.5.2", features = ["serde"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
kodecks-bot = { path = "../kodecks-bot", features = ["rayon"] }
image = { version = "0.25.2", default-features = false, features = ["rayon"] }
bpaf = { version = "0.9", features = ["derive"] }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-storage = "0.3.0"
sys-locale = { version = "0.3.1", features = ["js"] }
web-sys = "0.3.72"

[build-dependencies]
anyhow = "1.0.89"
vergen-git2 = { version = "1.0", features = ["cargo"] }

[features]
trace_chrome = ["trace", "bevy/trace_chrome"]
trace = []
embed_assets = ["bevy_embedded_assets"]
