[package]
name = "kodecks-catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpaf = { version = "0.9.15", features = ["derive"] }
kodecks = { path = "../kodecks" }
phf = { version = "0.11.2", features = ["macros"] }
