[package]
name = "kodecks-dsl"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
jaq-core = { version = "2.0.0-beta", default-features = false }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.128"
kodecks = { path = "../kodecks" }
logos = "0.14.2"
thiserror = "1.0.63"
