[package]
name = "kodecks-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
futures-util = "0.3.30"
kodecks = { path = "../kodecks" }
kodecks-bot = { path = "../kodecks-bot" }
kodecks-catalog = { path = "../kodecks-catalog" }
serde = { version = "1.0.208", features = ["derive"] }
tracing = "0.1.40"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.43"
getrandom = { version = "0.2", features = ["js"] }
gloo-worker = { version = "0.5.0", features = ["futures"] }
console_error_panic_hook = "0.1.7"
serde_json = "1.0.128"
