[package]
name = "kodecks-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bech32 = "0.11.0"
bincode = "2.0.0-rc.3"
futures = "0.3.30"
futures-util = "0.3.30"
k256 = { version = "0.13.4", features = [
    "arithmetic",
    "precomputed-tables",
    "schnorr",
    "std",
], default-features = false }
kodecks = { path = "../kodecks" }
kodecks-bot = { path = "../kodecks-bot" }
kodecks-catalog = { path = "../kodecks-catalog" }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4.45"
getrandom = { version = "0.2", features = ["js"] }
gloo-worker = { version = "0.5.0", features = ["futures"] }
console_error_panic_hook = "0.1.7"
