[package]
name = "kodecks-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bincode = "2.0.0-rc.3"
dashmap = "6.1.0"
headers = "0.4.0"
http = "1.1.0"
kodecks = { path = "../kodecks" }
kodecks-engine = { path = "../kodecks-engine" }
kodecks-catalog = { path = "../kodecks-catalog" }
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3.30"
