[package]
name = "kodecks-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.6", features = ["ws"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bincode = "2.0.0-rc.3"
dashmap = "6.1.0"
headers = "0.4.0"
http = "1.1.0"
k256 = { version = "0.13.4", features = [
    "arithmetic",
    "precomputed-tables",
    "schnorr",
    "std",
], default-features = false }
kodecks = { path = "../kodecks" }
kodecks-engine = { path = "../kodecks-engine" }
kodecks-catalog = { path = "../kodecks-catalog" }
nanoid = "0.4.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3.30"
base64 = "0.22.1"
bech32 = "0.11.0"
tower_governor = { version = "0.4.2", features = ["axum"] }
chrono = "0.4.38"
semver = { version = "1.0.23", features = ["serde"] }
bpaf = { version = "0.9.15", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.89"
vergen-git2 = { version = "1.0", features = ["cargo"] }
