[package]
name = "kodecks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
dyn-clone = "1.0.17"
fluent-bundle = "0.15.3"
idna = "1.0.2"
num = "0.4.3"
phf = "0.11.2"
rand = { version = "0.8.5", features = ["small_rng"] }
regex-lite = "0.1.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_tuple = "0.5.0"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
tinystr = { version = "0.7.6", features = ["serde"] }
tracing = "0.1.40"
