[package]
name = "kodecks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "2.0.0-rc.3"
bitflags = { version = "2.6.0", features = ["serde"] }
dyn-clone = "1.0.17"
fluent-bundle = "0.15.3"
fluent_content = "0.0.5"
idna = "1.0.2"
logos = "0.14.2"
nanoid = "0.4.0"
num = "0.4.3"
phf = "0.11.2"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.208", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
tinystr = { version = "0.7.6", features = ["serde"] }
tracing = "0.1.40"

[dev-dependencies]
serde_json = "1.0.128"
